--- a/index.html
+++ b/index.html
@@ -4,35 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Моя страница</title>
+    <title>Main page</title>
   </head>
   <body>
     <!-- Top Line -->
     <header>
-      <a href="./index.html" style="color: blue; font-weight: 800">
-        WEB<span style="color: black">STUDIO</span>
-      </a>
       <nav>
+        <a href="./index.html">WEBSTUDIO</a>
         <ul>
-          <li>
-            <a href="">Studio</a>
-          </li>
-          <li>
-            <a href="">Portfolio</a>
-          </li>
-          <li>
-            <a href="">Contact</a>
-          </li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
-        <li>
-          <a href="meilto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-        </li>
-      </ul>
+      <address>
+        <ul>   
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
     <main>
       <!-- Dark-Bg -->
@@ -42,6 +32,7 @@
       </section>
       <!-- Section 1 -->
       <section>
+        <h2 hidden>Features</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -107,7 +98,7 @@
           </li>
         </ul>
       </section>
-      <!-- Section 2 -->
+      <!-- Section 3 -->
       <section>
         <h2>Our Team</h2>
         <ul>
@@ -155,9 +146,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html" style="color: blue; font-weight: 800">
-        WEB<span style="color: black">STUDIO</span>
-      </a>
+      <a href="./index.html">WEBSTUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
