--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Top Line -->
     <header>
       <nav>
-        <a href="./index.html">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -18,7 +18,7 @@
         </ul>
       </nav>
       <address>
-        <ul>   
+        <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
@@ -76,8 +76,6 @@
               height="300"
             />
           </li>
-        </ul>
-        <ul>
           <li>
             <img
               src="./images/img-2.jpg"
@@ -86,8 +84,6 @@
               height="300"
             />
           </li>
-        </ul>
-        <ul>
           <li>
             <img
               src="./images/img-3.jpg"
@@ -146,7 +142,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WEBSTUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
