--- a/index.html
+++ b/index.html
@@ -5,30 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Main page</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <!-- Top Line -->
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <a class="navig-logo" href="./index.html"
+          >WEB<span class="logo-span">STUDIO</span></a
+        >
+        <ul class="list">
+          <li>
+            <a class="navig-list-link link" href="./index.html">Studio</a>
+          </li>
+          <li>
+            <a
+              class="navig-list-link navig-link-activ link"
+              href="./portfolio.html"
+              >Portfolio</a
+            >
+          </li>
+          <li>
+            <a class="navig-list-link link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="header-contact">
+        <ul class="list">
+          <li>
+            <a class="header-adr link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="header-tel link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
       <!-- Dark-Bg -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="studio-header-box">
+        <h1 class="studio-header-box-title">
+          Effective Solutions for Your Business
+        </h1>
+        <button type="button" class="btn studio-btn">Order Service</button>
       </section>
       <!-- Section 1 -->
       <section>
@@ -141,10 +169,13 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
-        Increase the flow of customers and sales for your business with digital
+    <footer class="footer-box">
+      <a class="navig-logo" href="./index.html"
+        >WEB<span class="logo-span-footer">STUDIO</span></a
+      >
+      <p class="footer-text">
+        Increase the flow of customers and <br />
+        sales for your business with digital <br />
         marketing & growth solutions.
       </p>
     </footer>
